2A/05_Projet_GL/src/test/deca/context/invalid/complet/94_redefMeth_int_bool.deca
// Description :
//  une redefinition du methode du super super classe invalide 
// Resultats :
//    ligne 19 :  le boolean n'est pas un sous type du int 
// Historique : 
//  cree le 16/01/2024

class A {
    int get() {

    }
}

class B extends A {

}

class C extends B {
    boolean get() {
        
    }
}